# template-project

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  bot.py  mypy.ini  pyproject.toml  swagger-coverage-config-{{cookiecutter.project_slug}}.json  telegram-notifier-config.ini
{{cookiecutter.project_name}}/checkers/: http_checkers.py
{{cookiecutter.project_name}}/config/: stg.yaml
